--- a/sign-up.html
+++ b/sign-up.html
@@ -3,7 +3,7 @@
 <form ng-submit="userCtrl.addUser()">
 <div class="col-md-offset-5 col-md-3">
     <div class="signinup">
-            <h4>Sign up to Stack Overflow ZPI noowqonow</h4>
+            <h4>PrzemekSign up to Stack Overflow ZPI noowqonow4</h4>
             <input type="text" ng-model="userCtrl.user.login" id="login" class="form-control input-sm chat-input" placeholder="Name (your public display name)" required/>
             </br>
             <input type="email" ng-model="userCtrl.user.email" id="email" class="form-control input-sm chat-input" placeholder="Email (required, but never shown)" required/>
